--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </h3>
       <ul>
         <li><strong class="redBrick">▮</strong>: increase the paddle width by 1.5x for 10 seconds</li><br>
-        <li><strong class="whiteBrick">▮</strong>: give you a second controllable paddle for 15 seconds<br>Use <b><i class="hyphen">.</i>N<i class="hyphen">.</i></b> for left & <b><i class="hyphen">.</i>M<i class="hyphen">.</i></b> for right</li><br>
+        <li><strong class="whiteBrick">▮</strong>: give you a second controllable paddle for 15 seconds<br>Use <b><i class="hyphen">.</i>A<i class="hyphen">.</i></b> for left & <b><i class="hyphen">.</i>D<i class="hyphen">.</i></b> for right</li><br>
         <li><strong class="goldBrick">▮</strong>:<b><i class="hyphen">.</i>100<i class="hyphen">.</i></b> points automatically!!</li><br>
         <li><strong class="plusBrick"><i class="greenHyphen">.</i>+<i class="greenHyphen">.</i></strong>: Gives you one extra life</li>
       </ul><br>
